# mercadodirecto-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  order.py  payment.py  payout.py  product.py  user.py
app/routers/: auth.py  cart.py  consumers.py  farmers.py  orders.py  payments.py  products.py
app/schemas/: order.py  product.py  user.py
app/services/: __init__.py  base_client.py  mono.py  payout_worker.py  providers.py  pse_cleanup.py  velafi.py  workers.py
migrations/: env.py
migrations/versions/: 1ac7349bb5fb_add_quantity_reserved_to_products.py  55f19ad7737c_initial_schema.py  7825c3b1ddc5_add_restaurant_role.py  aa4abbeda401_add_mono_models_farmer_bank_payout.py  bf8b8753c7f1_merge_heads.py  retry_fields_farmer_payouts.py
tests/: conftest.py  test_checkout.py  test_mono.py  test_order_lifecycle.py  test_payments_mono.py  test_payout_worker.py  test_pse_cleanup.py  test_webhook.py
